# ClipSnap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  autostart.sh  build-deb.sh  install.sh  prd.md  prompt.md  system_architecture.md  tasks.md  tech_stack.md  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
debian/: changelog  control  postinst  postrm  prerm  rules
resources/: clipsnap.desktop  default_config.toml
src/: clipboard.rs  config.rs  database.rs  hotkeys.rs  main.rs  notifications.rs  screenshot.rs
src/models/: history_entry.rs  mod.rs
src/ui/: history_dialog.rs  mod.rs  overlay.rs
