[package]
name = "clipsnap"
version = "1.0.0"
edition = "2021"
description = "ClipSnap: Smart Area Screenshot & Clipboard History Manager for Linux"
license = "MIT"
authors = ["ClipSnap Team"]
readme = "README.md"
repository = "https://github.com/yourusername/clipsnap"

[dependencies]
gtk4 = { version = "0.7", default-features = false, features = ["v4_6"] }
gdk4 = { version = "0.7", default-features = false }
gdk-pixbuf = { version = "0.18", default-features = false }
cairo-rs = { version = "0.18", default-features = false }
glib = { version = "0.18", default-features = false }
gio = { version = "0.18", default-features = false }
x11rb = { version = "0.13", default-features = false, features = ["randr"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
global-hotkey = "0.5"
notify-rust = { version = "4", default-features = false, features = ["d"] }
arboard = { version = "3", default-features = false, features = ["image-data"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
log = { version = "0.4", default-features = false }
env_logger = { version = "0.10", default-features = false }
enigo = "0.6.1"

[profile.release]
opt-level = "z"       # Optimize for size
lto = "fat"           # Full link-time optimization
codegen-units = 1     # Better optimization, slower compile
strip = true          # Strip symbols
panic = "abort"       # Smaller panic handler
overflow-checks = false  # Disable overflow checks in release
